--- a/src/app/navigation/navigation.html
+++ b/src/app/navigation/navigation.html
@@ -7,7 +7,7 @@
     <li [class.active]="activeSection === 'Accueil'"
         (click)="setActiveSection('Accueil')">
       <i class="fas fa-clipboard-check"></i>
-      <span>Accuei</span>
+      <span>Accueil</span>
     </li>
     <li [class.active]="activeSection === 'Projet'"
         (click)="setActiveSection('Projet')">
@@ -18,8 +18,8 @@
       <i class="fas fa-clipboard-check"></i>
       <span>Utilisateur</span>
     </li>
-    <li [class.active]="activeSection === 'messagerie'"
-        (click)="setActiveSection('messagerie')">
+    <li [class.active]="activeSection === 'Messagerie'"
+        (click)="setActiveSection('Messagerie')">
       <i class="fas fa-comments"></i>
       <span>Messagerie</span>
     </li>
