--- a/src/app/entities/utilisateur/utilisateur-component.html
+++ b/src/app/entities/utilisateur/utilisateur-component.html
@@ -5,8 +5,8 @@
     </div>
 
     <div class="card-body">
-      <form [formGroup]="utilisateurForm" (ngSubmit)="ajouterLivrable(utilisateurForm)" class="create-form">
-        <!-- ✅ Nom et prénom sur la même ligne -->
+      <form [formGroup]="utilisateurForm" (ngSubmit)="ajouterUtilisateur(utilisateurForm)" class="create-form">
+        <!-- Nom et prénom sur la même ligne -->
         <div class="form-row">
           <div class="form-group">
             <label for="nom">Nom <span class="required">*</span></label>
@@ -31,7 +31,7 @@
             <option value="" disabled selected>-- Sélectionnez un rôle --</option>
             <option value="admin">Administrateur</option>
             <option value="etudiant">Étudiant</option>
-            <option value="encadrant">Encadreur</option>
+            <option value="encadreur">Encadreur</option>
           </select>
         </div>
         <div class="create-actions">
