--- a/src/app/entities/projet/liste-projet-dispo/liste-projet-component.html
+++ b/src/app/entities/projet/liste-projet-dispo/liste-projet-component.html
@@ -1,22 +1,22 @@
 <div class="container">
-  @if (monProjet) {
+  @if (!monProjet) {
     <h2>Projets disponibles</h2>
+  } @else {
+    <h2>Mon projet</h2>
   }
-  <h2>Mon projet</h2>
 
   @for (projet of projets; track projet.id) {
     <div class="projet-row">
-      <p><strong>Titre:</strong> {{ projet?.titre }}</p>
-      <p><strong>Date de soumission:</strong> {{ projet?.date_soumission }}</p>
+      <p><strong>Titre:</strong> {{ projet?.id }}</p>
       <p><strong>Encadreur:</strong> {{ projet?.encadrant }}</p>
-
       <div class="actions">
         <button (click)="ouvrirDetailModal(projet.id)">Détails</button>
 
         @if (!monProjet) {
           <button (click)="lier(projet)">S'attribuer</button>
         }
-        <button (click)="ouvrirFormLivrable(projet.id)">Ajouter un livrable</button>
+        @if (projet.statut !== 'disponible'){
+        <button (click)="ouvrirFormLivrable(projet.id)">Ajouter un livrable</button>}
       </div>
     </div>
   }
@@ -29,6 +29,7 @@
 <div class="modal" [class.show]="isFormLivrableModalOpen">
     <app-create-livrable [projetId]="selectedProjetId"></app-create-livrable>
 </div>
+
 <!-- MODAL DETAIL -->
 <div class="modal" [class.show]="isDetailModalOpen">
   <div class="modal-content">
