--- a/src/app/entities/utilisateur/utilisateur-component.html
+++ b/src/app/entities/utilisateur/utilisateur-component.html
@@ -31,7 +31,7 @@
             <option value="" disabled selected>-- Sélectionnez un rôle --</option>
             <option value="admin">Administrateur</option>
             <option value="etudiant">Étudiant</option>
-            <option value="encadreur">Encadreur</option>
+            <option value="encadrant">Encadrant</option>
           </select>
         </div>
         <div class="create-actions">
