--- a/src/app/entities/utilisateur/utilisateur-detail/utilisateur-detail.scss
+++ b/src/app/entities/utilisateur/utilisateur-detail/utilisateur-detail.scss
@@ -5,7 +5,7 @@
 }
 
 .details-card {
-  width: 450px;
+  width: 950px;
   background: #ffffff;
   border-radius: 12px;
   box-shadow: 0px 4px 15px rgba(0,0,0,0.1);
@@ -63,6 +63,39 @@
   transition: 0.3s;
 }
 
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5); /* fond sombre */
+  justify-content: center;
+  align-items: center;
+}
+
+.modal.show {
+  display: flex; /* visible quand .show est présent */
+}
+
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  position: relative;
+  width: 800px;
+  max-width: 90%;
+}
+
+.close {
+  position: absolute;
+  right: 15px;
+  top: 10px;
+  font-size: 24px;
+  cursor: pointer;
+}
 .btn-msg:hover {
   background: #004c99;
 }
